ASNN-738
git-svn-id: https://source.sakaiproject.org/contrib/assignment2/trunk@75213 fdecad78-55fc-0310-b1b2-d7d25cf747c9